# 2026-State-Street-Classiq-We-re-not-Shor

./: .gitignore  AGENTS.md  README.md  authenticate.py  main.py  pyproject.toml  requirements.txt
classical/: README.md  fat_tail_grapher.py  g-p_compare.py  histomaker.py  pyproject.toml  real_data.py  risk_analyzer.py  run_classical.py  run_smart.py  stock_fat_tail.py  tst.py  var_core.py  var_smart.py
classical/classical/results/: error_scaling.csv  summary.json
classical/results/: error_scaling.csv  summary.json
classical/smart/results/: error_scaling.csv  summary.json
comparison/: generate_placeholders.py
comparison/results/classical/: error_scaling.csv  summary.json
comparison/results/quantum/: iqae_epsilon_scaling.csv  (+1 more)
cvar/: README.md  combine_cvar_panels.py  cvar_iqae_eps_scaling.csv  cvar_iqae_shots_scaling.csv  iqae_cvar_epsilon_scaling.py  iqae_cvar_shots_scaling.py  run_all.py  run_cvar.py
quantum/: README.md  __init__.py  iqae_alpha_shots_heatmap.py  iqae_eps_alpha_tuning.py  iqae_epsilon_scaling.py  iqae_shots_scaling.py  iqae_var.py  iqae_var_run.py  main.py  mlae_var.py  pyproject.toml  value_at_risk.ipynb  var_state_prep.py
real_world_analysis/: README.md  __init__.py  combine_real_world_panels.py  iqae_real_world_epsilon_scaling.py  iqae_real_world_run.py  iqae_real_world_shots_scaling.py  quantum_state_prep.py  real_world_analysis.py
real_world_analysis/results/: iqae_real_world_eps.csv  iqae_real_world_eps_spx.csv
writeup/: cvar_error_scaling.csv  cvar_summary.json  main.aux  main.fdb_latexmk  main.fls  main.tex
(+4 files in other folders)
